sc/client.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: debug
  labels:
    istio-injection: enabled
---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: client
  name: client
  namespace: debug
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - image: zhongfox/sc:v1
          imagePullPolicy: Always
          name: client
