sc/echo.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: echo
    version: v1
  name: echo-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
      version: v1
  template:
    metadata:
      labels:
        app: echo
        version: v1
    spec:
      containers:
      - image: zhongfox/sc:v1
        imagePullPolicy: Always
        name: echo
        ports:
        - containerPort: 7000
          protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: echo
  name: echo
spec:
  ports:
    - name: http
      port: 7000
      protocol: TCP
  selector:
    app: echo
  type: ClusterIP
---
