sc/master.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: debug
  labels:
    istio-injection: enabled
---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: master
    version: v1
  name: master-v1
  namespace: debug
spec:
  replicas: 1
  selector:
    matchLabels:
      app: master
      version: v1
  template:
    metadata:
      labels:
        app: master
        version: v1
    spec:
      containers:
      - image: zhongfox/sc:v1
        imagePullPolicy: Always
        name: master
        ports:
        - containerPort: 7000
          protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: common
    version: v1
  name: common-v1
  namespace: debug
spec:
  replicas: 1
  selector:
    matchLabels:
      app: common
      version: v1
  template:
    metadata:
      labels:
        app: common
        version: v1
    spec:
      containers:
      - image: zhongfox/sc:v1
        imagePullPolicy: Always
        name: common
        ports:
        - containerPort: 7000
          protocol: TCP
---


apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: client
  name: client
  namespace: debug
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - image: zhongfox/sc:v1
          imagePullPolicy: Always
          name: client
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: master
  name: master
  namespace: debug
spec:
  ports:
    - name: http
      port: 7000
      protocol: TCP
  selector:
    app: master
  type: ClusterIP
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: sub
  name: sub
  namespace: debug
spec:
  ports:
    - name: http
      port: 7000
      protocol: TCP
  selector:
    app: sub
  type: ClusterIP
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: common
  name: common
  namespace: debug
spec:
  ports:
    - name: http
      port: 7000
      protocol: TCP
  selector:
    app: common
  type: ClusterIP
