sc/svc3.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: debug
  labels:
    istio-injection: enabled
---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: svc3
    version: v1
  name: svc3-v1
  namespace: debug
spec:
  replicas: 1
  selector:
    matchLabels:
      app: svc3
      version: v1
  template:
    metadata:
      labels:
        app: svc3
        version: v1
    spec:
      containers:
      - image: zhongfox/sc:v1
        imagePullPolicy: Always
        name: svc3
        ports:
        - containerPort: 7000
          protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: svc1
  name: svc1
  namespace: debug
spec:
  ports:
    - name: http
      port: 7000
      protocol: TCP
  selector:
    app: svc1
  type: ClusterIP
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: svc2
  name: svc2
  namespace: debug
spec:
  ports:
    - name: http
      port: 7000
      protocol: TCP
  selector:
    app: svc2
  type: ClusterIP
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: svc3
  name: svc3
  namespace: debug
spec:
  ports:
    - name: http
      port: 7000
      protocol: TCP
  selector:
    app: svc3
  type: ClusterIP
